# rest-py

./: .gitignore  README.md  app.py  pyproject.toml  server.py
src/entities/: post.py  user.py
src/handlers/: _shared.py  create_post.py  create_user.py  list_posts.py  list_users.py  retrieve_post.py  retrieve_user.py
src/iservices/: __init__.py  post_repo.py  user_repo.py
src/iusecases/: _utils.py  create_post.py  create_user.py  list_posts.py  list_users.py  retrieve_post.py  retrieve_user.py
src/services/: __init__.py  post_repo.py  schema.py  user_repo.py
src/usecases/: create_post.py  create_user.py  list_posts.py  list_users.py  retrieve_post.py  retrieve_user.py
